# mango_api

./: .gitignore  Makefile  README.md  celerybeat-schedule  dates.py  get_group.py  get_numbers.py  get_operator.py  get_recording.py  get_schemas.py  get_whole_call_history.py  manage.py  mango_call_history.txt  pyproject.toml  raw_api_response  raw_api_response 22042024  raw_api_response 4042024  raw_api_response.json  run.sh  манго данные столбцов сопоставляем 17012024.ods
mango_api/: admin.py  api.py  asgi.py  celery.py  models.py  settings.py  urls.py  views.py  wsgi.py
mango_api/management/commands/: startup_tasks.py
mango_api/migrations/: 0001_initial.py  0002_alter_groupgolangversion_id_and_more.py  0003_alter_operatorgolangversion_group.py  0004_alter_operatorgolangversion_id.py  0005_alter_operatorgolangversion_group.py  0006_alter_distributionschemagolangversion_id_and_more.py  0007_callhistorygolangversion_date_time_postupil.py  0008_alter_callhistorygolangversion_id.py  0009_alter_callhistorygolangversion_entry_id.py  0010_alter_callhistorygolangversion_recording_id.py  0011_alter_callrecordinggolangversion_id.py
mango_api/templates/: base.html  index.html
